feat(HU2): consultar orden de envío por número de guía
